--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,84 +1,73 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-    <head> 
-        <title th:text="${title}" /> 
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
-    </head>
-    <body>
-        <div class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom">
-            <a href="/" class="d-flex align-items-center link-body-emphasis text-decoration-none">
-                <span class="fs-4">Sushi-shop</span>
-            </a>
+<head>
+    <title th:text="${title}"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+</head>
+<body>
+<header th:insert="~{blocks/header :: header}"></header>
+<table>
+    <thead>
+    <tr>
+        <th class="px-3">ID</th>
+        <th class="px-3">Name</th>
+        <th class="px-3">Beschreibung</th>
+        <th class="px-3">Preis</th>
+    </tr>
+    </thead>
+    <tfoot/>
+    <tbody>
+    <tr th:each="dish : ${listDish}">
+        <td class="px-3" th:text="${dish.id}"></td>
+        <td class="px-3" th:text="${dish.name}"> "name"</td>
+        <td class="px-3" th:text="${dish.description}"></td>
+        <td class="px-3" th:text="${dish.price}"></td>
 
-            <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
-                <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="#">Login</a>
-                <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="#">Kontakt</a>
-            </nav>
-        </div>
-        <table>
-            <thead> 
-                <tr>
-                    <th class="px-3">ID</th>
-                    <th class="px-3">Name</th>
-                    <th class="px-3">Beschreibung</th>
-                    <th class="px-3">Preis</th>
-                </tr>
-            </thead>
-            <tfoot />
-            <tbody>
-                <tr th:each="dish : ${listDish}">
-                    <td class="px-3" th:text="${dish.id}"></td>
-                    <td class="px-3" th:text="${dish.name}"> "name"</td>
-                    <td class="px-3" th:text="${dish.description}"></td>
-                    <td class="px-3" th:text="${dish.price}"></td>
+        <td>
 
-                    <td>
-
-                        <form method="POST" th:action="@{/minusDish/{id}(id=${dish.id})}">
-                            <button type="submit"> - </button>
-                        </form>
-                    </td>
-                    <td> 
-                        <form method="POST" th:action="@{/plusDish/{id}(id=${dish.id})}">
-                            <button type="submit"> + </button>
-                        </form>
-                    </td>
-
-                </tr>
-            </tbody>
-        </table>
-
-        <div th:if="${not #lists.isEmpty(orderItemList)}">
-            <table>
-                <thead>
-                <h1 class="px-3">Ihre Bestelung:</h1>
-                <tr>
-                    <th class="px-3">Gericht</th>
-                    <th class="px-3">Menge</th>
-                    <th class="px-3">Preis</th>
-
-                </tr>
-                </thead>
-                <tfoot />
-                <tbody>
-                    <tr th:each="orderItem : ${orderItemList}">
-                        <td class="px-3" th:text="${orderItem.dish}"></td>
-                        <td class="px-3" th:text="${orderItem.quantity}"></td>
-                        <td class="px-3" th:text="${orderItem.price}"></td>
-
-
-
-                    </tr>
-
-                </tbody>
-            </table>
-            
-            <p class="px-3"> <b> Gesamtbetrag: <span th:text="${sumTotal}"></span> Euro</b></p>
-
-            <form method="POST" th:action="@{/order}">
-                <button type="submit" class="btn btn-primary mt-3">Bestellen</button>
+            <form method="POST" th:action="@{/minusDish/{id}(id=${dish.id})}">
+                <button type="submit"> -</button>
             </form>
-        </div>
-    </body>
+        </td>
+        <td>
+            <form method="POST" th:action="@{/plusDish/{id}(id=${dish.id})}">
+                <button type="submit"> +</button>
+            </form>
+        </td>
+
+    </tr>
+    </tbody>
+</table>
+
+<div th:if="${not #lists.isEmpty(orderItemList)}">
+    <table>
+        <thead>
+        <h1 class="px-3">Ihre Bestelung:</h1>
+        <tr>
+            <th class="px-3">Gericht</th>
+            <th class="px-3">Menge</th>
+            <th class="px-3">Preis</th>
+
+        </tr>
+        </thead>
+        <tfoot/>
+        <tbody>
+        <tr th:each="orderItem : ${orderItemList}">
+            <td class="px-3" th:text="${orderItem.dish}"></td>
+            <td class="px-3" th:text="${orderItem.quantity}"></td>
+            <td class="px-3" th:text="${orderItem.price}"></td>
+
+        </tr>
+
+        </tbody>
+    </table>
+
+    <p class="px-3"><b> Gesamtbetrag: <span th:text="${sumTotal}"></span> Euro</b></p>
+
+    <form method="POST" th:action="@{/order}">
+        <button type="submit" class="btn btn-primary mt-3">Bestellen</button>
+    </form>
+</div>
+</body>
 </html>
