--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -1,12 +1,23 @@
 <div th:fragment="header">
-<div class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom">
-    <a href="/" class="d-flex align-items-center link-body-emphasis text-decoration-none">
-        <span class="fs-4">Sushi-shop</span>
-    </a>
+    <div class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom">
+        <a href="/" class="d-flex align-items-center link-body-emphasis text-decoration-none">
+            <span class="fs-4">Sushi-shop</span>
+        </a>
 
-    <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
-        <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="#">Login</a>
-        <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="#">Kontakt</a>
-    </nav>
-</div>
+        <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
+            <!--span th:if="${#authorization.expression('isAuthenticated()')}">
+            Hello <span sec:authentication="name">User</span>
+            </span>
+            <span th:unless="${#authorization.expression('isAuthenticated()')}">
+
+            </span-->
+            <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/login">Login</a>
+            <span th:remove="tag" sec:authentication="name">
+            <form th:action="@{/logout}" method="post">
+                <input type="submit" value="Sign Out"/>
+            </form>
+            </span>
+            <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="#">Kontakt</a>
+        </nav>
+    </div>
 </div>
