--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     </head>
     <body>
-
+    <header th:insert="~{blocks/header :: header}"></header>
         <table class="table">
             <thead>
             <h3>Ihre Bestelung:</h3>
