--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -31,8 +31,8 @@
                     <div style="margin-top: 10px; text-align: center;" class="form-group">
                         <div class="col-sm-10 controls">
                             <button type="submit" class="btn btn-primary">Login</button>
-                            <button class="btn btn-light"><a th:href="@{/sushi-shop}">Home</a></button>
-                            <button class="btn btn-success"><a th:href="@{/sushi-shop}">Shop</a></button>
+                            <!--button class="btn btn-light"><a th:href="@{/sushi-shop}">Home</a></button>
+                            <button class="btn btn-success"><a th:href="@{/sushi-shop}">Shop</a></button-->
                         </div>
                     </div>
                     <div th:if="${param.error}">
