--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -1,63 +1,64 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
 <html>
-    <head> 
-        <title th:text="${title}" /> 
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <link href="style.css" th:href="@{/style.css}" rel="stylesheet" />
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
-    </head>
-    <body>
-    <header th:insert="~{blocks/header :: header}"></header>
-        <table class="table">
-            <thead>
-            <h3>Ihre Bestelung:</h3>
-            <tr>
-                <th>Gericht</th>
-                <th>Menge</th>
-                <th>Preis</th>
+<head>
+    <title th:text="${title}"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <link href="style.css" th:href="@{/style.css}" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+</head>
+<body>
+<header th:insert="~{blocks/header :: header}"></header>
+<div sec:authorize="isAuthenticated()">
+    Authenticated as <span sec:authentication="name"></span></div>
+<table class="table">
+    <thead>
+    <h3>Ihre Bestelung:</h3>
+    <tr>
+        <th>Gericht</th>
+        <th>Menge</th>
+        <th>Preis</th>
 
-            </tr>
-        </thead>
-        <tfoot />
-        <tbody>
-            <tr th:each="orderItem : ${orderItemList}">
-                <td th:text="${orderItem.dish}"></td>
-                <td th:text="${orderItem.quantity}"></td>
-                <td th:text="${orderItem.price}"></td>
+    </tr>
+    </thead>
+    <tfoot/>
+    <tbody>
+    <tr th:each="orderItem : ${orderItemList}">
+        <td th:text="${orderItem.dish}"></td>
+        <td th:text="${orderItem.quantity}"></td>
+        <td th:text="${orderItem.price}"></td>
 
-                <!--p th:each="orderItem : ${orderItemList}" th:text="${orderItem}"-->
+        <!--p th:each="orderItem : ${orderItemList}" th:text="${orderItem}"-->
 
-            </tr>
+    </tr>
 
-        </tbody>
-    </table>
+    </tbody>
+</table>
 
-    <p class="px-3"> <b> Gesamtbetrag: <span th:text="${sumTotal}"></span> Euro</b></p>
-    <div class="grid-customer-container" >
-        <h4>Bitte geben Sie Ihre Daten für die Lieferung ein</h4>
-        <input type="text" name="name" placeholder="Name" value="" />
-        <input type="text" name="phone" placeholder="Telephone" value="" />
-        <input type="text" name="email" placeholder="E-mail" value="" />
-        <input type="text" name="address" placeholder="Adresse" value="" />
-        <input type="text" name="date" placeholder="Liferungsdatum" value="" />
-        <input type="text" name="time" placeholder="Zeit" value="" />
-
-        <form action="" th:action="@{/}" 
-              th:object="${order}" 
-              method="POST"
-              >
-            <label for="name" th:text="#{name}">name</label>
-            <input type="text" th:field="*{name}" />
-            <br />
-            
-        </form>
-
+<p class="px-3"><b> Gesamtbetrag: <span th:text="${sumTotal}"></span> Euro</b></p>
+<div class="grid-customer-container">
+    <h4>Bitte geben Sie Ihre Daten für die Lieferung ein</h4>
+    <input type="text" name="name" placeholder="Name" th:value="${customer != null} ? ${customer.getFullName()} : ''"/>
+    <input type="text" name="phone" placeholder="Telephone"
+           th:value="${customer != null} ? ${customer.getPhone()} : ''"/>
+    <input type="text" name="email" placeholder="E-mail" th:value="${customer != null} ? ${customer.getEmail()} : ''"/>
+    <input type="text" name="address" placeholder="Adresse"
+           th:value="${customer != null} ? ${customer.getAddress()} : ''"/>
+    <!--TODO
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<script src="/datepicker.js"></script>
+<input type="text" name="date" id="datepicker" placeholder="Liferungsdatum" th:value="" />
+-->
+    <input type="text" name="date" placeholder="Liferungsdatum" value=""/>
+    <input type="text" name="time" placeholder="Zeit" value=""/>
 
 
-        <form method="POST" th:action="@{/orderCreate}">
-            <button type="submit" class="btn btn-primary mt-3">Bestellen</button>
-        </form>
-    </div>
+    <form method="POST" th:action="@{/orderCreate}">
+        <button type="submit" class="btn btn-primary mt-3">Bestellen</button>
+    </form>
+</div>
 </body>
 </html>
