--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -7,6 +7,10 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link href="style.css" th:href="@{/style.css}" rel="stylesheet"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="/datepicker.js"></script>
 </head>
 <body>
 <header th:insert="~{blocks/header :: header}"></header>
@@ -39,24 +43,18 @@
 <p class="px-3"><b> Gesamtbetrag: <span th:text="${sumTotal}"></span> Euro</b></p>
 <div class="grid-customer-container">
     <h4>Bitte geben Sie Ihre Daten für die Lieferung ein</h4>
-    <input type="text" name="name" placeholder="Name" th:value="${customer != null} ? ${customer.getFullName()} : ''"/>
+    <input type="text" name="name" placeholder="Name" th:value="${customer != null ? customer.getFullName() : ''}" />
     <input type="text" name="phone" placeholder="Telephone"
            th:value="${customer != null} ? ${customer.getPhone()} : ''"/>
     <input type="text" name="email" placeholder="E-mail" th:value="${customer != null} ? ${customer.getEmail()} : ''"/>
     <input type="text" name="address" placeholder="Adresse"
            th:value="${customer != null} ? ${customer.getAddress()} : ''"/>
-    <!--TODO
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-<script src="/datepicker.js"></script>
-<input type="text" name="date" id="datepicker" placeholder="Liferungsdatum" th:value="" />
--->
-    <input type="text" name="date" placeholder="Liferungsdatum" value=""/>
+
+    <input type="text" name="date" id="datepicker" placeholder="Liferungsdatum" th:value="${#dates.format(#dates.createNow(), 'yyyy-mm-dd')}" />
     <input type="text" name="time" placeholder="Zeit" value=""/>
 
 
-    <form method="POST" th:action="@{/orderCreate}">
+    <form method="POST" th:action="@{/orderCreated}">
         <button type="submit" class="btn btn-primary mt-3">Bestellen</button>
     </form>
 </div>
